# fast_api_test

./: db.sqlite3  main.py  pyproject.toml
api_v1/products/: crud.py  shemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  product.py
items_views/: items_views.py
users/: crud.py  shemas.py  views.py
